<resources>
    <string name="app_name">EasyParkingApp</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="title_activity_bienvenida">Bienvenida</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="title_activity_fullscreen">FullscreenActivity</string>
    <string name="Login">Log in</string>
    <string name="Register">Register</string>
    <string name="Email">E-mail</string>
    <string name="Password">Password</string>
    <string name="title_activity_register">Register</string>
    <string name="Name">Name</string>
    <string name="ConfirmPassword">Confirm Password</string>
    <string name="Back">Back</string>
    <string name="ForgotPassword">Forgort Password?</string>
    <string name="usuarioOContraseñaInvalido">Correo, nombre , telefono o contraseña invalido</string>
    <string name="passwordissmiss">Las contraseñas no coinciden</string>
    <string name="errorRegistro">Error creando usuario en bd contacte administrador</string>
    <string name="menu_mapa">Mapa</string>
    <string name="menu_profile">Perfil</string>
    <string name="menu_parking">Parqueaderos</string>
    <string name="logOut">Quieres Cerrar Sesion?</string>
    <string name="yes">si</string>
    <string name="no">No</string>
    <string name="address">Direccion</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="Phone">Phone</string>
    <string name="menu_myCar">Mi Carro</string>
    <string name="title_activity_my_car">MyCarActivity</string>
    <string name="title_activity_mycar">mycarActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
</resources>