<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_map"
            android:icon="@drawable/outline_map_black_24dp"
            android:title="@string/menu_mapa" />
        <item
            android:id="@+id/nav_profile"
            android:icon="@drawable/silueta"
            android:title="@string/menu_profile" />

        <item
            android:id="@+id/nav_mycar"
            android:icon="@drawable/vehiculoautomovil"
            android:title="@string/menu_myCar" />

        <item
            android:id="@+id/nav_parking"
            android:icon="@drawable/outline_local_parking_black_24dp"
            android:title="@string/menu_parking" />

    </group>
</menu>