<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_map">

    <fragment
        android:id="@+id/nav_map"
        android:name="com.example.easyparkingapp.ui.map.MapsFragment"
        android:label="@string/menu_mapa"
        tools:layout="@layout/fragment_maps" />

    <fragment
        android:id="@+id/nav_profile"
        android:name="com.example.easyparkingapp.ui.profile.ProfileFragment"
        android:label="@string/menu_profile"
        tools:layout="@layout/fragment_profile" />


    <fragment
        android:id="@+id/nav_parking"
        android:name="com.example.easyparkingapp.ui.parking.ParkingFragment"
        android:label="@string/menu_parking"
        tools:layout="@layout/fragment_parking" />


    <fragment
        android:id="@+id/nav_mycar"
        android:name="com.example.easyparkingapp.ui.mycar.MyCarFragment"
        android:label="@string/menu_myCar"
        tools:layout="@layout/fragment_parking" />



</navigation>