<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/fondo2"
    android:theme="@style/ThemeOverlay.EasyParkingApp.FullscreenContainer"
    tools:context=".Register">

    <!-- The primary full-screen view. This can be replaced with whatever view
         is needed to present your content, e.g. VideoView, SurfaceView,
         TextureView, etc. -->
    <!-- This FrameLayout insets its children based on system windows using
         android:fitsSystemWindows. -->

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/fullscreen_content"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:keepScreenOn="true"
        android:text="@string/dummy_content"
        android:textColor="?attr/fullscreenTextColor"
        android:textSize="50sp"
        android:textStyle="bold">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/constraintLayout"
            android:layout_width="0dp"
            android:layout_height="71dp"
            android:background="@color/white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/textView2"
                style="@style/Widget.AppCompat.TextView.SpinnerItem"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="37dp"
                android:fontFamily="@font/courgette"
                android:text="@string/Register"
                android:textColor="@color/black"
                android:textSize="34sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.428" />

            <ImageButton
                android:id="@+id/backButton"
                android:layout_width="64dp"
                android:layout_height="69dp"
                android:layout_marginStart="7dp"
                android:layout_marginTop="11dp"
                android:layout_marginBottom="11dp"
                android:backgroundTint="#9A6B27"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@android:drawable/ic_menu_revert" />

        </androidx.constraintlayout.widget.ConstraintLayout>


        <Button
            android:id="@+id/registerButton"
            android:layout_width="190dp"
            android:layout_height="68dp"
            android:layout_marginTop="52dp"
            android:fontFamily="@font/courgette"
            android:text="@string/Register"
            app:layout_constraintEnd_toEndOf="@+id/editTextTextPassword1"
            app:layout_constraintHorizontal_bias="0.495"
            app:layout_constraintStart_toStartOf="@+id/editTextTextPassword1"
            app:layout_constraintTop_toBottomOf="@+id/editTextTextPassword1" />

        <EditText
            android:id="@+id/editTextTextPersonName"
            android:layout_width="299dp"
            android:layout_height="50dp"
            android:layout_marginBottom="40dp"
            android:background="@color/white"
            android:ems="10"
            android:fontFamily="@font/courgette"
            android:hint="@string/Name"
            android:inputType="textEmailAddress"
            android:textAlignment="center"
            android:textColorHighlight="@color/white"
            android:textColorHint="#000000"
            android:textColorLink="#009688"
            app:layout_constraintBottom_toTopOf="@+id/editTextTextEmailAddress"
            app:layout_constraintEnd_toEndOf="@+id/editTextTextEmailAddress"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/editTextTextEmailAddress"
            app:layout_constraintTop_toBottomOf="@+id/constraintLayout"
            app:layout_constraintVertical_bias="0.913" />

        <EditText
            android:id="@+id/editTextTextPassword"
            android:layout_width="299dp"
            android:layout_height="50dp"
            android:layout_marginTop="36dp"
            android:background="@color/white"
            android:ems="10"
            android:fontFamily="@font/courgette"
            android:hint="@string/Password"
            android:inputType="textPassword"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textColorHint="#000000"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editTextTextEmailAddress" />

        <EditText
            android:id="@+id/editTextTextPassword1"
            android:layout_width="299dp"
            android:layout_height="50dp"
            android:layout_marginTop="36dp"
            android:background="@color/white"
            android:ems="10"
            android:fontFamily="@font/courgette"
            android:hint="@string/ConfirmPassword"
            android:inputType="textPassword"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textColorHint="#000000"
            app:layout_constraintEnd_toEndOf="@+id/editTextTextPassword"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/editTextTextPassword"
            app:layout_constraintTop_toBottomOf="@+id/editTextTextPassword" />

        <EditText
            android:id="@+id/editTextTextEmailAddress"
            android:layout_width="299dp"
            android:layout_height="50dp"
            android:layout_marginTop="148dp"
            android:background="@color/white"
            android:ems="10"
            android:fontFamily="@font/courgette"
            android:hint="@string/Email"
            android:inputType="textEmailAddress"
            android:textAlignment="center"
            android:textColorHighlight="@color/white"
            android:textColorHint="#000000"
            android:textColorLink="#009688"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/constraintLayout" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fitsSystemWindows="true"
        tools:visibility="gone">

        <LinearLayout
            android:id="@+id/fullscreen_content_controls"
            style="@style/Widget.Theme.EasyParkingApp.ButtonBar.Fullscreen"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|center_horizontal"
            android:orientation="horizontal"
            tools:ignore="UselessParent">

            <Button
                android:id="@+id/dummy_button"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/dummy_button" />

        </LinearLayout>
    </FrameLayout>

</FrameLayout>