<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/background_light"
    android:theme="@style/ThemeOverlay.EasyParkingApp.FullscreenContainer"
    tools:context=".Bienvenida">

    <!-- The primary full-screen view. This can be replaced with whatever view
         is needed to present your content, e.g. VideoView, SurfaceView,
         TextureView, etc. -->

    <!-- This FrameLayout insets its children based on system windows using
         android:fitsSystemWindows. -->

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/fullscreen_content"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/fondo2"
        android:gravity="center"
        android:keepScreenOn="true"
        android:text="@string/dummy_content"
        android:textColor="?attr/fullscreenTextColor"
        android:textSize="50sp"
        android:textStyle="bold">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/constraintLayout2"
            android:layout_width="0dp"
            android:layout_height="220dp"
            android:backgroundTint="#CDB5AE"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent">

            <Button
                android:id="@+id/loginButton"
                android:layout_width="190dp"
                android:layout_height="68dp"
                android:fontFamily="@font/courgette"
                android:text="@string/Login"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/registerButton"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <Button
                android:id="@+id/registerButton"
                android:layout_width="190dp"
                android:layout_height="68dp"
                android:fontFamily="@font/courgette"
                android:text="@string/Register"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/loginButton"
                app:layout_constraintTop_toTopOf="parent" />

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:fitsSystemWindows="true"
                android:visibility="gone"
                tools:layout_editor_absoluteX="0dp"
                tools:layout_editor_absoluteY="0dp">

                <LinearLayout
                    android:id="@+id/fullscreen_content_controls"
                    style="@style/Widget.Theme.EasyParkingApp.ButtonBar.Fullscreen"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom|center_horizontal"
                    android:orientation="horizontal"
                    tools:ignore="UselessParent">

                    <Button
                        android:id="@+id/dummy_button"
                        style="?android:attr/buttonBarButtonStyle"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/dummy_button" />

                </LinearLayout>

            </FrameLayout>
        </androidx.constraintlayout.widget.ConstraintLayout>

        <ImageView
            android:id="@+id/imageView3"
            android:layout_width="295dp"
            android:layout_height="253dp"
            android:layout_marginStart="59dp"
            android:layout_marginTop="127dp"
            android:layout_marginEnd="58dp"
            android:layout_marginBottom="131dp"
            app:layout_constraintBottom_toTopOf="@+id/constraintLayout2"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0"
            app:srcCompat="@drawable/logo777" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="110dp"
            android:layout_marginEnd="108dp"
            android:layout_marginBottom="88dp"
            android:fontFamily="@font/courgette"
            android:text="Easy Parking"
            android:textColor="#FBF9F9"
            android:textSize="34sp"
            app:layout_constraintBottom_toTopOf="@+id/constraintLayout2"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView3"
            app:layout_constraintVertical_bias="0.0" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>