<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.profile.ProfileFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white">

        <ImageView
            android:id="@+id/imageUser"
            android:layout_width="175dp"
            android:layout_height="171dp"
            android:layout_marginTop="24dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.497"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:srcCompat="@tools:sample/avatars" />

        <Button
            android:id="@+id/logoutButton"
            android:layout_width="143dp"
            android:layout_height="52dp"
            android:layout_marginTop="52dp"
            android:backgroundTint="#C14E02"
            android:shadowColor="#000000"
            android:text="Log out"
            android:textColor="#FFFFFF"
            android:textColorHighlight="#000000"
            android:textColorHint="#000000"
            android:textColorLink="#000000"
            app:layout_constraintEnd_toEndOf="@+id/profileNumber"
            app:layout_constraintHorizontal_bias="0.503"
            app:layout_constraintStart_toStartOf="@+id/profileNumber"
            app:layout_constraintTop_toBottomOf="@+id/profileNumber"
            app:strokeColor="#000000" />

        <TextView
            android:id="@+id/profileName"
            style="@style/Widget.AppCompat.AutoCompleteTextView"
            android:layout_width="246dp"
            android:layout_height="55dp"
            android:layout_marginTop="40dp"
            android:backgroundTint="#000000"
            android:ems="10"
            android:shadowColor="@color/black"
            android:text="@string/Name"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:textColor="#121212"
            android:textColorHighlight="#000000"
            android:textColorHint="#000000"
            android:textColorLink="#000000"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.497"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageUser" />

        <TextView
            android:id="@+id/profileNumber"
            style="@style/Widget.AppCompat.AutoCompleteTextView"
            android:layout_width="280dp"
            android:layout_height="51dp"
            android:layout_marginTop="32dp"
            android:backgroundTint="#000000"
            android:ems="10"
            android:shadowColor="@color/black"
            android:text="@string/Phone"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:textColor="#121212"
            android:textColorHighlight="#000000"
            android:textColorHint="#000000"
            android:textColorLink="#000000"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.496"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/profileEmail"
            app:layout_constraintVertical_bias="0.016" />

        <TextView
            android:id="@+id/profileEmail"
            style="@style/Widget.AppCompat.AutoCompleteTextView"
            android:layout_width="322dp"
            android:layout_height="50dp"
            android:layout_marginTop="28dp"
            android:backgroundTint="#000000"
            android:ems="10"
            android:shadowColor="@color/black"
            android:text="@string/Email"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:textColor="#121212"
            android:textColorHighlight="#000000"
            android:textColorHint="#000000"
            android:textColorLink="#000000"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.494"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/profileName" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>